--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "angularfire2": "^5.4.2",
+    "firebase-tools": "^8.0.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "materialize-css": "^1.0.0",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.5",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
